Removed MaxPermSize from surefire config
Builds are run in JDK 8 and this parameter is deprecated and removed in JDK 9