@@ -323,7 +323,7 @@
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
-                  <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=160m</argLine>
+                  <argLine>-Xms256m -Xmx512m</argLine>
                </configuration>
             </plugin>
 
